--- a/Lab1/w3schools/basic.html
+++ b/Lab1/w3schools/basic.html
@@ -11,7 +11,15 @@
 
 </body>
 </html>
-<!--
-What is a correct HTML markup for the document type declaration? <!DOCTYPE html>
 
--->>
+<!DOCTYPE html>
+<html>
+<body>
+    <h1>This is heading 1</h1>
+    <p>This is a paragraph.</p>
+</body>
+</html>
+
+<p>This is a paragraph</p>
+
+<a href="https://www.w3schools.com">This is a link</a>
