--- a/Lab1/w3schools/elements.html
+++ b/Lab1/w3schools/elements.html
@@ -9,3 +9,11 @@
 </body>
 </html>
 
+<h1>This is a heading</h1>
+
+<html>
+    <body>
+        <h4>This is a heading </h4>
+        <p>This is a paragraph</p>
+    </body>
+</html>
